// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings wallet reducer should handle WALLET_ALLOWANCE 1`] = `
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": 0,
  "timestamp": null,
  "tokens": {
    "TK1": {
      "address": null,
      "allowance": {
        "0x670dc68af4125b8137d706bdec4abd8950d86c20": 4,
      },
      "balance": 0,
      "dao": null,
      "decimals": null,
      "fee": null,
      "feeAddress": null,
      "icon": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isOptional": true,
      "isPending": false,
      "isReissuable": false,
      "managersList": null,
      "name": null,
      "platform": null,
      "symbol": TK1,
      "timestamp": null,
      "totalSupply": 0,
      "transactionHash": null,
      "url": null,
      "withFee": false,
    },
  },
  "transactionHash": null,
  "transactions": {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },

`;

exports[`settings wallet reducer should handle WALLET_BALANCE 1`] = `
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": 0,
  "timestamp": null,
  "tokens": {
    "TK1": {
      "address": null,
      "allowance": {
      },
      "balance": 5,
      "dao": null,
      "decimals": null,
      "fee": null,
      "feeAddress": null,
      "icon": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isOptional": true,
      "isPending": false,
      "isReissuable": false,
      "managersList": null,
      "name": null,
      "platform": null,
      "symbol": TK1,
      "timestamp": null,
      "totalSupply": 0,
      "transactionHash": null,
      "url": null,
      "withFee": false,
    },
  },
  "transactionHash": null,
  "transactions": {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },

`;

exports[`settings wallet reducer should handle WALLET_IS_TIME_REQUIRED 1`] = `
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": false,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": 0,
  "timestamp": null,
  "tokens": {
  },
  "transactionHash": null,
  "transactions": {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },

`;

exports[`settings wallet reducer should handle WALLET_TIME_DEPOSIT with empty wallet 1`] = `
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": 0x3ca0cbc8c9e2d629b13cfe7106535f532fb59c85,
  "timeDeposit": 0,
  "timestamp": null,
  "tokens": {
  },
  "transactionHash": null,
  "transactions": {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },

`;

exports[`settings wallet reducer should handle WALLET_TIME_DEPOSIT with non empty wallet 1`] = `
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": 3,
  "timestamp": null,
  "tokens": {
  },
  "transactionHash": null,
  "transactions": {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },

`;

exports[`settings wallet reducer should handle WALLET_TOKENS 1`] = `
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": true,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": 0,
  "timestamp": null,
  "tokens": {
    "TK1": {
      "address": null,
      "allowance": {
      },
      "balance": 0,
      "dao": null,
      "decimals": null,
      "fee": null,
      "feeAddress": null,
      "icon": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isOptional": true,
      "isPending": false,
      "isReissuable": false,
      "managersList": null,
      "name": null,
      "platform": null,
      "symbol": TK1,
      "timestamp": null,
      "totalSupply": 0,
      "transactionHash": null,
      "url": null,
      "withFee": false,
    },
    "TK2": {
      "address": null,
      "allowance": {
      },
      "balance": 0,
      "dao": null,
      "decimals": null,
      "fee": null,
      "feeAddress": null,
      "icon": null,
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isOptional": true,
      "isPending": false,
      "isReissuable": false,
      "managersList": null,
      "name": null,
      "platform": null,
      "symbol": TK2,
      "timestamp": null,
      "totalSupply": 0,
      "transactionHash": null,
      "url": null,
      "withFee": false,
    },
  },
  "transactionHash": null,
  "transactions": {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },

`;

exports[`settings wallet reducer should handle WALLET_TOKENS_FETCH 1`] = `
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": true,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": 0,
  "timestamp": null,
  "tokens": {
  },
  "transactionHash": null,
  "transactions": {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },

`;

exports[`settings wallet reducer should handle WALLET_TRANSACTION 1`] = `
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": 0,
  "timestamp": null,
  "tokens": {
  },
  "transactionHash": null,
  "transactions": {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
      "hash1 - 1 - 2": {
        "args": null,
        "blockHash": null,
        "blockNumber": 10,
        "by": null,
        "credited": null,
        "from": 1,
        "gas": null,
        "gasFee": 0,
        "gasPrice": null,
        "id": null,
        "input": null,
        "symbol": ,
        "time": null,
        "timestamp": null,
        "to": 2,
        "transactionIndex": null,
        "txHash": hash1,
        "type": ,
        "value": 0,
      },
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },

`;

exports[`settings wallet reducer should handle WALLET_TRANSACTIONS 1`] = `
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": 0,
  "timestamp": null,
  "tokens": {
  },
  "transactionHash": null,
  "transactions": {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isPending": false,
    "list": {
      "tx1": {
        "args": null,
        "blockHash": null,
        "blockNumber": null,
        "by": null,
        "credited": null,
        "from": 1,
        "gas": null,
        "gasFee": 0,
        "gasPrice": null,
        "id": null,
        "input": null,
        "symbol": ,
        "time": null,
        "timestamp": null,
        "to": 2,
        "transactionIndex": null,
        "txHash": hash1,
        "type": ,
        "value": 0,
      },
      "tx2": {
        "args": null,
        "blockHash": null,
        "blockNumber": null,
        "by": null,
        "credited": null,
        "from": 3,
        "gas": null,
        "gasFee": 0,
        "gasPrice": null,
        "id": null,
        "input": null,
        "symbol": ,
        "time": null,
        "timestamp": null,
        "to": 4,
        "transactionIndex": null,
        "txHash": hash2,
        "type": ,
        "value": 0,
      },
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },

`;

exports[`settings wallet reducer should handle WALLET_TRANSACTIONS_FETCH 1`] = `
  "address": null,
  "bccAddress": null,
  "btcAddress": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isMainWallet": true,
  "isMultisig": false,
  "isPending": false,
  "isTIMERequired": true,
  "nemAddress": null,
  "timeAddress": null,
  "timeDeposit": 0,
  "timestamp": null,
  "tokens": {
  },
  "transactionHash": null,
  "transactions": {
    "endOfList": false,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": true,
    "isPending": false,
    "list": {
      "a": 1,
    },
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
  },

`;
